--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -1,16 +1,19 @@
+
 name: Flask Continuous Integration
 
-on: #trigger whenever there is a push to main branch
+on:  #Trigger whenever there is a push to my main branch
   push:
     branches: [main, master]
 
-jobs: #actions
-  build:
-    runs-on: ubuntu-latest # universal os that is heavily supported by devs
+
+jobs: #The actions
+
+  build: 
+    runs-on: ubuntu-latest #universal os, that is heavily support by developers
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v2 #ubuntu specific action
+        uses: actions/checkout@v2
 
       - name: Set Up Python
         uses: actions/setup-python@v2
@@ -18,7 +21,7 @@ jobs: #actions
           python-version: 3.12
 
       - name: Create Virtual Environment
-        run: |
+        run: | 
           python -m venv venv
           source venv/bin/activate
 
@@ -31,16 +34,16 @@ jobs: #actions
         run: |
           echo "Python Version: $(python --version)"
           echo "Working Directory: $(pwd)"
-          echo "Contents of Working Directory: &(ls -l)"
-          echo "Contents of site packages: $(ls -l venv/lib/python*/site-packages)"
+          echo "Contents of Working Directory: $(ls -l)"
+          echo "Contents of site-packages: $(ls -l venv/lib/python*/site-packages)"
 
   test:
-    needs: build
+    needs: build #Means that we need the build job to complete before we run our tests
     runs-on: ubuntu-latest
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v2 #ubuntu specific action
+        uses: actions/checkout@v2
 
       - name: Set Up Python
         uses: actions/setup-python@v2
@@ -48,7 +51,7 @@ jobs: #actions
           python-version: 3.12
 
       - name: Create Virtual Environment
-        run: |
+        run: | 
           python -m venv venv
           source venv/bin/activate
 
@@ -58,4 +61,8 @@ jobs: #actions
           python -m pip install -r requirements.txt
 
       - name: Run tests
-        run: python -m unittest discover -s test -p 'test_*.py'
+        run: python -m unittest discover -s tests -p 'test_*.py' #Running all test files inside my test folder as long as the file i named test_<anything>.py
+
+
+
+  
